[project]
name = "dagster_demo"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster@file:///Users/colton/src/dagster/python_modules/dagster",
    "databricks-sdk>=0.61.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli@file:///Users/colton/src/dagster/python_modules/libraries/dagster-dg-cli",
    "dagster-dg@file:///Users/colton/src/dagster/python_modules/libraries/dagster-dg",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_demo"
registry_modules = [
    "dagster_demo.components.*",
]

[tool.hatch.metadata]
allow-direct-references = true
